--- a/forms/src/pages/SurveyCreationPage/components/form/AnswerSection/AnswersSection.scss
+++ b/forms/src/pages/SurveyCreationPage/components/form/AnswerSection/AnswersSection.scss
@@ -11,10 +11,11 @@
   margin-top: 1rem;
   border: 0;
   background-color: white;
-  width: 3rem;
-  height: 3rem;
+  // width: 3rem;
+  height: auto;
   border-radius: 25px;
   cursor: pointer;
+  padding: 0;
 }
 
 .answers-section-answers-X-button:active {
@@ -31,13 +32,14 @@
   padding-bottom: 1rem;
   padding-left: 1rem;
   padding-top: 1rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .liClass {
+  height: auto;
   display: flex;
-  justify-content: right;
-  height: 2rem;
-  margin-bottom: .4rem;
+  align-items: center;
 }
 
 .answers {
@@ -47,7 +49,7 @@
 }
 
 .dragIconAnswer {
-  margin-top: .2rem;
+  margin-top: 0.2rem;
   transform: rotate(90deg);
   color: gray;
 }
@@ -59,7 +61,7 @@
 }
 
 .dragIconAnswerselect {
-  margin-top: .2rem;
+  margin-top: 0.2rem;
   transform: rotate(90deg);
   color: gray;
 }
